--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
   </div>
 
   <ul class="article" id="news-articles">
-    <li class="article-img"></li>
-    <li class="article-title"></li>
-    <li class="article-description"></li>
-    <li class="article-author"></li>
+    <div class="article-img"></div>
+    <h2 class="article-title"></h2>
+    <p class="article-description"></p>
+    <span class="article-author"></span>
     <li class="article-link"></li>
   </ul>
 
