--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,16 @@
     <input type="text" name="search" id="search" placeholder="Type and press enter to search..." />
   </div>
 
-  <ul class="article" id="news-articles">
-    <div class="article-img"></div>
-    <h2 class="article-title"></h2>
-    <p class="article-description"></p>
-    <span class="article-author"></span>
-    <li class="article-link"></li>
+  <ul id="news-articles">
+    <li class="article"><a class="article-link" >
+      <div class="img_area">
+      <img class="article-img">
+      </div><br><br>
+      <h2 class="article-title"></h2><br><br>
+      <p class="article-description"></p><br><br>
+      <span class="article-author"></span><br>
+      </a>
+    </li>
   </ul>
 
   <script src="scripts/index.js"></script>
