--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>News Aggregator</title>
-  <link rel="stylesheet" href="styles/index.css"/>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News Aggregator APP</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
- <h1 class="site-title">News Aggregator</h1>
-
-  
-  <div class="search-container">
-    <input type="text" name="search" id="search" placeholder="Type and press enter to search..." />
-  </div>
-
-  <ul id="news-articles">
-    <li class="article"><a class="article-link" >
-      <div class="img_area">
-      <img class="article-img">
-      </div><br><br>
-      <h2 class="article-title"></h2><br><br>
-      <p class="article-description"></p><br><br>
-      <span class="article-author"></span><br>
-      </a>
-    </li>
-  </ul>
-
-  <script src="scripts/index.js"></script>
+    <!-- Main Header section and toggle key -->
+            <div class="mainheading">NEWS AGGREGATOR</div>  
+            <div class="toggletxt">Toggle to Lite Mode</div>  
+            <label class="switch">
+                <input type="checkbox" id="toggle_action" unchecked >
+                <div class="slider round"></div>
+            </label>
+            
+    <!--  -->
+    <!-- Search Bar  -->
+    <div class="search-bar">
+      <input type="text" name="search" id="search" 
+      placeholder="Type and press enter to search..."/>
+    </div>
+    <!-- News Display Area -->
+            <ul id="news-articles"></ul>
+                  
+      <script src="scripts/index.js"></script>
 </body>
 </html>
-
-
